--- a/00.语法/00.06_顺序结构.md
+++ b/00.语法/00.06_顺序结构.md
@@ -1,2 +1,201 @@
 # 顺序结构
 
+## 问题描述
+
+顺序结构是最基本的程序结构，程序按照语句的先后顺序依次执行。它是程序中最简单的流程控制，没有任何判断和跳转。
+
+## 基本概念
+
+### 特点
+1. 按照语句的先后顺序执行
+2. 每个语句都会被执行一次
+3. 程序的执行路径是唯一的
+4. 适用于线性处理问题
+
+### 代码实现
+
+``` c++ []
+#include <iostream> // 包含输入输出流库
+using namespace std; // 使用标准命名空间
+
+int main() { // 主函数
+    // 声明变量
+    int a, b;
+    
+    // 输入两个数
+    cout << "请输入两个数：" << endl;
+    cin >> a >> b;
+    
+    // 计算和
+    int sum = a + b;
+    
+    // 输出结果
+    cout << "两数之和为：" << sum << endl;
+    
+    return 0;
+}
+```
+
+``` java []
+import java.util.Scanner; // 包含Scanner类
+
+public class Main { // 在 OJ 中，主类名必须为Main
+    public static void main(String[] args) { // 主方法
+        // 创建输入对象
+        Scanner scanner = new Scanner(System.in);
+        
+        // 输入两个数
+        System.out.println("请输入两个数：");
+        int a = scanner.nextInt();
+        int b = scanner.nextInt();
+        
+        // 计算和
+        int sum = a + b;
+        
+        // 输出结果
+        System.out.println("两数之和为：" + sum);
+        
+        // 关闭输入流
+        scanner.close();
+    }
+}
+```
+
+``` python []
+# 输入两个数
+print("请输入两个数：")
+a = int(input())
+b = int(input())
+
+# 计算和
+sum = a + b
+
+# 输出结果
+print("两数之和为：", sum)
+```
+
+## 应用场景
+
+1. 简单的数学计算
+2. 顺序处理数据
+3. 输入输出操作
+4. 变量赋值和运算
+5. 函数调用序列
+
+## 注意事项
+
+1. 语句的执行顺序
+2. 变量的声明和初始化
+3. 数据类型的匹配
+4. 输入输出格式
+5. 运算符优先级
+
+## 常见示例
+
+1. 交换两个数
+``` cpp []
+void swap(int& a, int& b) {
+    int temp = a;
+    a = b;
+    b = temp;
+}
+
+int main() {
+    int x = 5, y = 10;
+    cout << "交换前：x = " << x << ", y = " << y << endl;
+    
+    swap(x, y);
+    cout << "交换后：x = " << x << ", y = " << y << endl;
+    
+    return 0;
+}
+```
+
+``` java []
+public class Solution {
+    public static void swap(int[] arr, int i, int j) {
+        int temp = arr[i];
+        arr[i] = arr[j];
+        arr[j] = temp;
+    }
+    
+    public static void main(String[] args) {
+        int[] arr = {5, 10};
+        System.out.println("交换前：x = " + arr[0] + ", y = " + arr[1]);
+        
+        swap(arr, 0, 1);
+        System.out.println("交换后：x = " + arr[0] + ", y = " + arr[1]);
+    }
+}
+```
+
+``` python []
+def swap(arr, i, j):
+    arr[i], arr[j] = arr[j], arr[i]
+
+# 主程序
+arr = [5, 10]
+print("交换前：x =", arr[0], ", y =", arr[1])
+
+swap(arr, 0, 1)
+print("交换后：x =", arr[0], ", y =", arr[1])
+```
+
+2. 计算圆的面积和周长
+``` cpp []
+#include <cmath>
+
+double getArea(double radius) {
+    return M_PI * radius * radius;
+}
+
+double getPerimeter(double radius) {
+    return 2 * M_PI * radius;
+}
+
+int main() {
+    double r = 5.0;
+    cout << "半径为" << r << "的圆：" << endl;
+    cout << "面积为：" << getArea(r) << endl;
+    cout << "周长为：" << getPerimeter(r) << endl;
+    return 0;
+}
+```
+
+``` java []
+public class Circle {
+    static final double PI = Math.PI;
+    
+    public static double getArea(double radius) {
+        return PI * radius * radius;
+    }
+    
+    public static double getPerimeter(double radius) {
+        return 2 * PI * radius;
+    }
+    
+    public static void main(String[] args) {
+        double r = 5.0;
+        System.out.println("半径为" + r + "的圆：");
+        System.out.println("面积为：" + getArea(r));
+        System.out.println("周长为：" + getPerimeter(r));
+    }
+}
+```
+
+``` python []
+import math
+
+def get_area(radius):
+    return math.pi * radius * radius
+
+def get_perimeter(radius):
+    return 2 * math.pi * radius
+
+# 主程序
+r = 5.0
+print(f"半径为{r}的圆：")
+print(f"面积为：{get_area(r)}")
+print(f"周长为：{get_perimeter(r)}")
+```
+
