--- a/00.语法/00.08_循环结构.md
+++ b/00.语法/00.08_循环结构.md
@@ -1,3 +1,303 @@
 # 循环结构
 
-待更新...
+## 问题描述
+
+循环结构是程序中重复执行某段代码的语句，包括for循环、while循环和do-while循环。它是程序中最基本的迭代控制，用于处理重复性的任务。
+
+## 基本概念
+
+### 特点
+1. 重复执行某段代码
+2. 需要循环条件和循环体
+3. 可以有循环变量
+4. 适用于重复性任务
+
+### 代码实现
+
+1. for循环
+``` c++ []
+#include <iostream>
+using namespace std;
+
+int main() {
+    // 计算1到10的和
+    int sum = 0;
+    for (int i = 1; i <= 10; i++) {
+        sum += i;
+    }
+    cout << "1到10的和为：" << sum << endl;
+    
+    // 遍历数组
+    int arr[] = {1, 2, 3, 4, 5};
+    for (int i = 0; i < 5; i++) {
+        cout << arr[i] << " ";
+    }
+    cout << endl;
+    
+    // 范围for循环(C++11)
+    for (int num : arr) {
+        cout << num << " ";
+    }
+    cout << endl;
+    
+    return 0;
+}
+```
+
+``` java []
+public class Main {
+    public static void main(String[] args) {
+        // 计算1到10的和
+        int sum = 0;
+        for (int i = 1; i <= 10; i++) {
+            sum += i;
+        }
+        System.out.println("1到10的和为：" + sum);
+        
+        // 遍历数组
+        int[] arr = {1, 2, 3, 4, 5};
+        for (int i = 0; i < arr.length; i++) {
+            System.out.print(arr[i] + " ");
+        }
+        System.out.println();
+        
+        // 增强for循环
+        for (int num : arr) {
+            System.out.print(num + " ");
+        }
+        System.out.println();
+    }
+}
+```
+
+``` python []
+# 计算1到10的和
+sum = 0
+for i in range(1, 11):
+    sum += i
+print("1到10的和为：", sum)
+
+# 遍历列表
+arr = [1, 2, 3, 4, 5]
+for i in range(len(arr)):
+    print(arr[i], end=" ")
+print()
+
+# 直接遍历
+for num in arr:
+    print(num, end=" ")
+print()
+```
+
+2. while循环
+``` c++ []
+int main() {
+    // 计算阶乘
+    int n = 5, result = 1;
+    while (n > 0) {
+        result *= n;
+        n--;
+    }
+    cout << "5的阶乘为：" << result << endl;
+    
+    // 输入验证
+    int input;
+    while (true) {
+        cout << "请输入一个正数：";
+        cin >> input;
+        if (input > 0) break;
+        cout << "输入错误，请重试" << endl;
+    }
+    
+    return 0;
+}
+```
+
+``` java []
+public class Main {
+    public static void main(String[] args) {
+        // 计算阶乘
+        int n = 5, result = 1;
+        while (n > 0) {
+            result *= n;
+            n--;
+        }
+        System.out.println("5的阶乘为：" + result);
+        
+        // 输入验证
+        Scanner scanner = new Scanner(System.in);
+        int input;
+        while (true) {
+            System.out.print("请输入一个正数：");
+            input = scanner.nextInt();
+            if (input > 0) break;
+            System.out.println("输入错误，请重试");
+        }
+        scanner.close();
+    }
+}
+```
+
+``` python []
+# 计算阶乘
+n = 5
+result = 1
+while n > 0:
+    result *= n
+    n -= 1
+print("5的阶乘为：", result)
+
+# 输入验证
+while True:
+    try:
+        input_num = int(input("请输入一个正数："))
+        if input_num > 0:
+            break
+        print("输入错误，请重试")
+    except ValueError:
+        print("请输入一个数字")
+```
+
+3. do-while循环（Python没有do-while）
+``` c++ []
+int main() {
+    int num;
+    do {
+        cout << "请输入一个正数：";
+        cin >> num;
+    } while (num <= 0);
+    
+    return 0;
+}
+```
+
+``` java []
+public class Main {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        int num;
+        do {
+            System.out.print("请输入一个正数：");
+            num = scanner.nextInt();
+        } while (num <= 0);
+        scanner.close();
+    }
+}
+```
+
+``` python []
+# Python模拟do-while循环
+num = 0
+while True:
+    num = int(input("请输入一个正数："))
+    if num > 0:
+        break
+```
+
+## 应用场景
+
+1. 重复执行任务
+2. 遍历数据结构
+3. 输入验证
+4. 数值计算
+5. 游戏循环
+
+## 注意事项
+
+1. 循环条件的设置
+2. 循环变量的更新
+3. 避免死循环
+4. break和continue的使用
+5. 循环嵌套的层数
+
+## 常见示例
+
+1. 打印九九乘法表
+``` cpp []
+void printMultiplicationTable() {
+    for (int i = 1; i <= 9; i++) {
+        for (int j = 1; j <= i; j++) {
+            cout << j << "×" << i << "=" << i * j << "\t";
+        }
+        cout << endl;
+    }
+}
+```
+
+``` java []
+public class Solution {
+    public static void printMultiplicationTable() {
+        for (int i = 1; i <= 9; i++) {
+            for (int j = 1; j <= i; j++) {
+                System.out.print(j + "×" + i + "=" + (i * j) + "\t");
+            }
+            System.out.println();
+        }
+    }
+}
+```
+
+``` python []
+def print_multiplication_table():
+    for i in range(1, 10):
+        for j in range(1, i + 1):
+            print(f"{j}×{i}={i*j}", end="\t")
+        print()
+```
+
+2. 查找素数
+``` cpp []
+bool isPrime(int n) {
+    if (n < 2) return false;
+    for (int i = 2; i * i <= n; i++) {
+        if (n % i == 0) return false;
+    }
+    return true;
+}
+
+void findPrimes(int n) {
+    for (int i = 2; i <= n; i++) {
+        if (isPrime(i)) {
+            cout << i << " ";
+        }
+    }
+    cout << endl;
+}
+```
+
+``` java []
+public class Solution {
+    public static boolean isPrime(int n) {
+        if (n < 2) return false;
+        for (int i = 2; i * i <= n; i++) {
+            if (n % i == 0) return false;
+        }
+        return true;
+    }
+    
+    public static void findPrimes(int n) {
+        for (int i = 2; i <= n; i++) {
+            if (isPrime(i)) {
+                System.out.print(i + " ");
+            }
+        }
+        System.out.println();
+    }
+}
+```
+
+``` python []
+def is_prime(n):
+    if n < 2:
+        return False
+    for i in range(2, int(n ** 0.5) + 1):
+        if n % i == 0:
+            return False
+    return True
+
+def find_primes(n):
+    for i in range(2, n + 1):
+        if is_prime(i):
+            print(i, end=" ")
+    print()
+```
