--- a/00.语法/00.09_函数与递归.md
+++ b/00.语法/00.09_函数与递归.md
@@ -1,3 +1,303 @@
 # 函数与递归
 
-待更新...
+## 问题描述
+
+函数是一段完成特定功能的代码块，可以被重复调用。递归是函数调用自身的一种特殊情况，常用于解决具有重复性质的问题。
+
+## 基本概念
+
+### 特点
+1. 函数有参数和返回值
+2. 函数体是独立的代码块
+3. 递归需要有终止条件
+4. 适用于模块化编程
+
+### 代码实现
+
+1. 基本函数
+``` c++ []
+// 函数声明
+int add(int a, int b); // 一般来说，只要函数之间不互相调用，可以不声明
+void printMessage(string msg); // 按顺序定义在 main 函数之前即可
+double average(vector<int>& nums);
+
+// 函数定义
+int add(int a, int b) {
+    return a + b;
+}
+
+void printMessage(string msg) {
+    cout << msg << endl;
+}
+
+double average(vector<int>& nums) {
+    if (nums.empty()) return 0;
+    int sum = 0;
+    for (int num : nums) {
+        sum += num;
+    }
+    return static_cast<double>(sum) / nums.size();
+}
+
+int main() {
+    cout << add(3, 5) << endl;  // 输出：8
+    printMessage("Hello");      // 输出：Hello
+    vector<int> nums = {1, 2, 3, 4, 5};
+    cout << average(nums) << endl;  // 输出：3
+    return 0;
+}
+```
+
+``` java []
+public class Main {
+    // 函数定义
+    public static int add(int a, int b) {
+        return a + b;
+    }
+    
+    public static void printMessage(String msg) {
+        System.out.println(msg);
+    }
+    
+    public static double average(int[] nums) {
+        if (nums.length == 0) return 0;
+        int sum = 0;
+        for (int num : nums) {
+            sum += num;
+        }
+        return (double)sum / nums.length;
+    }
+    
+    public static void main(String[] args) {
+        System.out.println(add(3, 5));  // 输出：8
+        printMessage("Hello");          // 输出：Hello
+        int[] nums = {1, 2, 3, 4, 5};
+        System.out.println(average(nums));  // 输出：3.0
+    }
+}
+```
+
+``` python []
+# 函数定义
+def add(a: int, b: int) -> int:
+    return a + b
+
+def print_message(msg: str) -> None:
+    print(msg)
+
+def average(nums: list) -> float:
+    if not nums:
+        return 0
+    return sum(nums) / len(nums)
+
+# 主程序
+print(add(3, 5))        # 输出：8
+print_message("Hello")  # 输出：Hello
+nums = [1, 2, 3, 4, 5]
+print(average(nums))    # 输出：3.0
+```
+
+2. 递归函数
+``` c++ []
+// 阶乘计算
+int factorial(int n) {
+    if (n <= 1) return 1;
+    return n * factorial(n - 1);
+}
+
+// 斐波那契数列
+int fibonacci(int n) {
+    if (n <= 1) return n;
+    return fibonacci(n - 1) + fibonacci(n - 2);
+}
+
+// 二分查找
+int binarySearch(vector<int>& nums, int target, int left, int right) {
+    if (left > right) return -1;
+    
+    int mid = left + (right - left) / 2;
+    if (nums[mid] == target) return mid;
+    if (nums[mid] > target) 
+        return binarySearch(nums, target, left, mid - 1);
+    return binarySearch(nums, target, mid + 1, right);
+}
+```
+
+``` java []
+public class Solution {
+    // 阶乘计算
+    public static int factorial(int n) {
+        if (n <= 1) return 1;
+        return n * factorial(n - 1);
+    }
+    
+    // 斐波那契数列
+    public static int fibonacci(int n) {
+        if (n <= 1) return n;
+        return fibonacci(n - 1) + fibonacci(n - 2);
+    }
+    
+    // 二分查找
+    public static int binarySearch(int[] nums, int target, int left, int right) {
+        if (left > right) return -1;
+        
+        int mid = left + (right - left) / 2;
+        if (nums[mid] == target) return mid;
+        if (nums[mid] > target)
+            return binarySearch(nums, target, left, mid - 1);
+        return binarySearch(nums, target, mid + 1, right);
+    }
+}
+```
+
+``` python []
+# 阶乘计算
+def factorial(n: int) -> int:
+    if n <= 1:
+        return 1
+    return n * factorial(n - 1)
+
+# 斐波那契数列
+def fibonacci(n: int) -> int:
+    if n <= 1:
+        return n
+    return fibonacci(n - 1) + fibonacci(n - 2)
+
+# 二分查找
+def binary_search(nums: list, target: int, left: int, right: int) -> int:
+    if left > right:
+        return -1
+    
+    mid = left + (right - left) // 2
+    if nums[mid] == target:
+        return mid
+    if nums[mid] > target:
+        return binary_search(nums, target, left, mid - 1)
+    return binary_search(nums, target, mid + 1, right)
+```
+
+## 应用场景
+
+1. 代码复用
+2. 模块化编程
+3. 数学计算
+4. 数据结构操作
+5. 分治算法
+
+## 注意事项
+
+1. 函数命名规范
+2. 参数类型匹配
+3. 递归终止条件
+4. 递归深度限制
+5. 返回值处理
+
+## 常见示例
+
+1. 汉诺塔问题
+``` cpp []
+void hanoi(int n, char from, char aux, char to) {
+    if (n == 1) {
+        cout << "Move disk 1 from " << from << " to " << to << endl;
+        return;
+    }
+    hanoi(n - 1, from, to, aux);
+    cout << "Move disk " << n << " from " << from << " to " << to << endl;
+    hanoi(n - 1, aux, from, to);
+}
+```
+
+``` java []
+public class Solution {
+    public static void hanoi(int n, char from, char aux, char to) {
+        if (n == 1) {
+            System.out.println("Move disk 1 from " + from + " to " + to);
+            return;
+        }
+        hanoi(n - 1, from, to, aux);
+        System.out.println("Move disk " + n + " from " + from + " to " + to);
+        hanoi(n - 1, aux, from, to);
+    }
+}
+```
+
+``` python []
+def hanoi(n: int, from_rod: str, aux_rod: str, to_rod: str) -> None:
+    if n == 1:
+        print(f"Move disk 1 from {from_rod} to {to_rod}")
+        return
+    hanoi(n - 1, from_rod, to_rod, aux_rod)
+    print(f"Move disk {n} from {from_rod} to {to_rod}")
+    hanoi(n - 1, aux_rod, from_rod, to_rod)
+```
+
+2. 快速排序
+``` cpp []
+void quickSort(vector<int>& nums, int left, int right) {
+    if (left >= right) return;
+    
+    int pivot = nums[left + (right - left) / 2];
+    int i = left, j = right;
+    
+    while (i <= j) {
+        while (nums[i] < pivot) i++;
+        while (nums[j] > pivot) j--;
+        if (i <= j) {
+            swap(nums[i], nums[j]);
+            i++;
+            j--;
+        }
+    }
+    
+    quickSort(nums, left, j);
+    quickSort(nums, i, right);
+}
+```
+
+``` java []
+public class Solution {
+    public static void quickSort(int[] nums, int left, int right) {
+        if (left >= right) return;
+        
+        int pivot = nums[left + (right - left) / 2];
+        int i = left, j = right;
+        
+        while (i <= j) {
+            while (nums[i] < pivot) i++;
+            while (nums[j] > pivot) j--;
+            if (i <= j) {
+                int temp = nums[i];
+                nums[i] = nums[j];
+                nums[j] = temp;
+                i++;
+                j--;
+            }
+        }
+        
+        quickSort(nums, left, j);
+        quickSort(nums, i, right);
+    }
+}
+```
+
+``` python []
+def quick_sort(nums: list, left: int, right: int) -> None:
+    if left >= right:
+        return
+    
+    pivot = nums[left + (right - left) // 2]
+    i, j = left, right
+    
+    while i <= j:
+        while nums[i] < pivot:
+            i += 1
+        while nums[j] > pivot:
+            j -= 1
+        if i <= j:
+            nums[i], nums[j] = nums[j], nums[i]
+            i += 1
+            j -= 1
+    
+    quick_sort(nums, left, j)
+    quick_sort(nums, i, right)
+```
