--- a/00.语法/00.10_数组.md
+++ b/00.语法/00.10_数组.md
@@ -1,3 +1,294 @@
 # 数组
 
-待更新...
+## 问题描述
+
+数组是一种线性数据结构，用于存储相同类型的数据元素。它在内存中是连续存储的，可以通过索引快速访问元素。
+
+## 基本概念
+
+### 特点
+1. 连续存储空间
+2. 固定大小（部分语言支持动态数组）
+3. 支持随机访问
+4. 适用于线性存储和查找
+
+### 代码实现
+
+1. 一维数组
+``` c++ []
+// 数组声明和初始化
+int arr1[5] = {1, 2, 3, 4, 5};  // 静态数组
+vector<int> arr2 = {1, 2, 3, 4, 5};  // 动态数组
+
+// 访问元素
+cout << arr1[0] << endl;  // 输出第一个元素
+arr1[0] = 10;  // 修改元素
+
+// 遍历数组
+for (int i = 0; i < 5; i++) {
+    cout << arr1[i] << " ";
+}
+cout << endl;
+
+// 范围for循环
+for (int num : arr1) {
+    cout << num << " ";
+}
+cout << endl;
+
+// 动态数组操作
+arr2.push_back(6);  // 添加元素
+arr2.pop_back();    // 删除最后一个元素
+cout << arr2.size() << endl;  // 获取大小
+```
+
+``` java []
+public class Main {
+    public static void main(String[] args) {
+        // 数组声明和初始化
+        int[] arr1 = {1, 2, 3, 4, 5};  // 固定大小数组
+        ArrayList<Integer> arr2 = new ArrayList<>(
+            Arrays.asList(1, 2, 3, 4, 5)  // 动态数组
+        );
+        
+        // 访问元素
+        System.out.println(arr1[0]);  // 输出第一个元素
+        arr1[0] = 10;  // 修改元素
+        
+        // 遍历数组
+        for (int i = 0; i < arr1.length; i++) {
+            System.out.print(arr1[i] + " ");
+        }
+        System.out.println();
+        
+        // 增强for循环
+        for (int num : arr1) {
+            System.out.print(num + " ");
+        }
+        System.out.println();
+        
+        // 动态数组操作
+        arr2.add(6);  // 添加元素
+        arr2.remove(arr2.size() - 1);  // 删除最后一个元素
+        System.out.println(arr2.size());  // 获取大小
+    }
+}
+```
+
+``` python []
+# 列表（Python的动态数组）声明和初始化
+arr = [1, 2, 3, 4, 5]
+
+# 访问元素
+print(arr[0])  # 输出第一个元素
+arr[0] = 10   # 修改元素
+
+# 遍历列表
+for i in range(len(arr)):
+    print(arr[i], end=" ")
+print()
+
+# 直接遍历
+for num in arr:
+    print(num, end=" ")
+print()
+
+# 列表操作
+arr.append(6)    # 添加元素
+arr.pop()        # 删除最后一个元素
+print(len(arr))  # 获取大小
+```
+
+2. 二维数组
+``` c++ []
+// 二维数组声明和初始化
+int arr1[3][4] = {
+    {1, 2, 3, 4},
+    {5, 6, 7, 8},
+    {9, 10, 11, 12}
+};
+
+vector<vector<int>> arr2 = {
+    {1, 2, 3, 4},
+    {5, 6, 7, 8},
+    {9, 10, 11, 12}
+};
+
+// 访问元素
+cout << arr1[0][0] << endl;  // 输出第一个元素
+arr1[0][0] = 10;  // 修改元素
+
+// 遍历二维数组
+for (int i = 0; i < 3; i++) {
+    for (int j = 0; j < 4; j++) {
+        cout << arr1[i][j] << " ";
+    }
+    cout << endl;
+}
+
+// 范围for循环
+for (const auto& row : arr2) {
+    for (int num : row) {
+        cout << num << " ";
+    }
+    cout << endl;
+}
+```
+
+``` java []
+public class Main {
+    public static void main(String[] args) {
+        // 二维数组声明和初始化
+        int[][] arr1 = {
+            {1, 2, 3, 4},
+            {5, 6, 7, 8},
+            {9, 10, 11, 12}
+        };
+        
+        ArrayList<ArrayList<Integer>> arr2 = new ArrayList<>();
+        for (int i = 0; i < 3; i++) {
+            ArrayList<Integer> row = new ArrayList<>();
+            for (int j = 0; j < 4; j++) {
+                row.add(i * 4 + j + 1);
+            }
+            arr2.add(row);
+        }
+        
+        // 访问元素
+        System.out.println(arr1[0][0]);  // 输出第一个元素
+        arr1[0][0] = 10;  // 修改元素
+        
+        // 遍历二维数组
+        for (int i = 0; i < arr1.length; i++) {
+            for (int j = 0; j < arr1[i].length; j++) {
+                System.out.print(arr1[i][j] + " ");
+            }
+            System.out.println();
+        }
+        
+        // 增强for循环
+        for (int[] row : arr1) {
+            for (int num : row) {
+                System.out.print(num + " ");
+            }
+            System.out.println();
+        }
+    }
+}
+```
+
+``` python []
+# 二维列表声明和初始化
+arr = [
+    [1, 2, 3, 4],
+    [5, 6, 7, 8],
+    [9, 10, 11, 12]
+]
+
+# 访问元素
+print(arr[0][0])  # 输出第一个元素
+arr[0][0] = 10   # 修改元素
+
+# 遍历二维列表
+for i in range(len(arr)):
+    for j in range(len(arr[i])):
+        print(arr[i][j], end=" ")
+    print()
+
+# 直接遍历
+for row in arr:
+    for num in row:
+        print(num, end=" ")
+    print()
+
+# 列表推导式创建二维列表
+n, m = 3, 4
+matrix = [[i * m + j + 1 for j in range(m)] for i in range(n)]
+```
+
+## 应用场景
+
+1. 线性数据存储
+2. 矩阵运算
+3. 图像处理
+4. 动态规划
+5. 缓存系统
+
+## 注意事项
+
+1. 数组越界
+2. 内存分配
+3. 空间复杂度
+4. 动态扩容
+5. 多维数组的遍历
+
+## 常见示例
+
+1. 数组反转
+``` cpp []
+void reverse(vector<int>& nums) {
+    int left = 0, right = nums.size() - 1;
+    while (left < right) {
+        swap(nums[left], nums[right]);
+        left++;
+        right--;
+    }
+}
+```
+
+``` java []
+public static void reverse(int[] nums) {
+    int left = 0, right = nums.length - 1;
+    while (left < right) {
+        int temp = nums[left];
+        nums[left] = nums[right];
+        nums[right] = temp;
+        left++;
+        right--;
+    }
+}
+```
+
+``` python []
+def reverse(nums: list) -> None:
+    left, right = 0, len(nums) - 1
+    while left < right:
+        nums[left], nums[right] = nums[right], nums[left]
+        left += 1
+        right -= 1
+```
+
+2. 矩阵转置
+``` cpp []
+vector<vector<int>> transpose(vector<vector<int>>& matrix) {
+    int n = matrix.size(), m = matrix[0].size();
+    vector<vector<int>> result(m, vector<int>(n));
+    
+    for (int i = 0; i < n; i++) {
+        for (int j = 0; j < m; j++) {
+            result[j][i] = matrix[i][j];
+        }
+    }
+    return result;
+}
+```
+
+``` java []
+public static int[][] transpose(int[][] matrix) {
+    int n = matrix.length, m = matrix[0].length;
+    int[][] result = new int[m][n];
+    
+    for (int i = 0; i < n; i++) {
+        for (int j = 0; j < m; j++) {
+            result[j][i] = matrix[i][j];
+        }
+    }
+    return result;
+}
+```
+
+``` python []
+def transpose(matrix: list) -> list:
+    return [[matrix[i][j] for i in range(len(matrix))]
+            for j in range(len(matrix[0]))]
+```
