--- a/00.语法/00.18_优先队列.md
+++ b/00.语法/00.18_优先队列.md
@@ -1,3 +1,306 @@
 # 优先队列
 
-待更新...
+## 问题描述
+
+优先队列是一种特殊的队列，其中的元素都有一个优先级。  
+在C++中为priority_queue，Java中为PriorityQueue，Python中使用heapq模块。  
+默认情况下，优先队列按照元素从大到小的顺序出队。
+
+## 基本概念
+
+### 特点
+1. 元素有优先级
+2. 自动排序
+3. 堆实现
+4. 动态调整
+5. 支持自定义比较
+
+### 代码实现
+
+1. C++ Priority Queue
+``` c++ []
+#include <iostream>
+#include <queue>
+#include <vector>
+using namespace std;
+
+int main() {
+    // 创建优先队列（默认大顶堆）
+    priority_queue<int> pq;
+    
+    // 创建小顶堆
+    priority_queue<int, vector<int>, greater<int>> min_pq;
+    
+    // 入队
+    pq.push(3);
+    pq.push(1);
+    pq.push(4);
+    pq.push(2);
+    
+    // 查看顶部元素
+    cout << "Top: " << pq.top() << endl;  // 输出：4
+    
+    // 出队
+    pq.pop();
+    cout << "After pop, top: " << pq.top() << endl;  // 输出：3
+    
+    // 检查是否为空
+    cout << "Is empty: " << (pq.empty() ? "yes" : "no") << endl;
+    
+    // 获取大小
+    cout << "Size: " << pq.size() << endl;
+    
+    // 自定义比较函数
+    struct Compare {
+        bool operator()(const pair<string, int>& a, 
+                       const pair<string, int>& b) {
+            return a.second < b.second;  // 按照数值从大到小排序
+        }
+    };
+    
+    priority_queue<pair<string, int>, 
+                  vector<pair<string, int>>, 
+                  Compare> custom_pq;
+    
+    custom_pq.push({"apple", 3});
+    custom_pq.push({"banana", 1});
+    custom_pq.push({"orange", 4});
+    
+    return 0;
+}
+```
+
+2. Java PriorityQueue
+``` java []
+import java.util.PriorityQueue;
+import java.util.Comparator;
+
+public class Main {
+    public static void main(String[] args) {
+        // 创建优先队列（默认小顶堆）
+        PriorityQueue<Integer> pq = new PriorityQueue<>();
+        
+        // 创建大顶堆
+        PriorityQueue<Integer> maxPq = 
+            new PriorityQueue<>(Comparator.reverseOrder());
+        
+        // 入队
+        pq.offer(3);
+        pq.offer(1);
+        pq.offer(4);
+        pq.offer(2);
+        
+        // 查看顶部元素
+        System.out.println("Top: " + pq.peek());  // 输出：1
+        
+        // 出队
+        pq.poll();
+        System.out.println("After poll, top: " + pq.peek());  // 输出：2
+        
+        // 检查是否为空
+        System.out.println("Is empty: " + pq.isEmpty());
+        
+        // 获取大小
+        System.out.println("Size: " + pq.size());
+        
+        // 自定义比较器
+        PriorityQueue<String> customPq = new PriorityQueue<>(
+            (a, b) -> b.length() - a.length()  // 按长度从大到小排序
+        );
+        
+        customPq.offer("apple");
+        customPq.offer("banana");
+        customPq.offer("orange");
+        
+        // 清空队列
+        while (!pq.isEmpty()) {
+            System.out.print(pq.poll() + " ");
+        }
+        System.out.println();
+    }
+}
+```
+
+3. Python Heapq
+``` python []
+import heapq
+
+# 创建空列表
+nums = []
+
+# 入堆（默认小顶堆）
+heapq.heappush(nums, 3)
+heapq.heappush(nums, 1)
+heapq.heappush(nums, 4)
+heapq.heappush(nums, 2)
+
+# 查看堆顶元素
+print("Top:", nums[0])  # 输出：1
+
+# 出堆
+min_val = heapq.heappop(nums)
+print("Popped:", min_val)  # 输出：1
+
+# 将列表转换为堆
+numbers = [3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5]
+heapq.heapify(numbers)  # 原地转换为堆
+
+# 获取最大的n个元素
+largest = heapq.nlargest(3, numbers)
+print("Largest 3:", largest)
+
+# 获取最小的n个元素
+smallest = heapq.nsmallest(3, numbers)
+print("Smallest 3:", smallest)
+
+# 实现大顶堆（通过取负数）
+class MaxHeap:
+    def __init__(self):
+        self.heap = []
+    
+    def push(self, val):
+        heapq.heappush(self.heap, -val)
+    
+    def pop(self):
+        return -heapq.heappop(self.heap)
+    
+    def top(self):
+        return -self.heap[0]
+    
+    def is_empty(self):
+        return len(self.heap) == 0
+
+# 自定义对象的优先队列
+class Item:
+    def __init__(self, name, priority):
+        self.name = name
+        self.priority = priority
+    
+    def __lt__(self, other):
+        return self.priority < other.priority
+
+# 使用自定义对象
+items = []
+heapq.heappush(items, Item("task1", 3))
+heapq.heappush(items, Item("task2", 1))
+heapq.heappush(items, Item("task3", 4))
+```
+
+## 应用场景
+
+1. 任务调度
+2. 事件处理
+3. 数据流处理
+4. 图算法（Dijkstra）
+5. 中位数维护
+
+## 注意事项
+
+1. 默认顺序
+2. 内存开销
+3. 时间复杂度
+4. 自定义比较
+5. 线程安全性
+
+## 常见示例
+
+1. 第K大的元素
+``` cpp []
+int findKthLargest(vector<int>& nums, int k) {
+    priority_queue<int> pq(nums.begin(), nums.end());
+    for (int i = 1; i < k; i++) {
+        pq.pop();
+    }
+    return pq.top();
+}
+```
+
+``` java []
+public int findKthLargest(int[] nums, int k) {
+    PriorityQueue<Integer> pq = 
+        new PriorityQueue<>(Comparator.reverseOrder());
+    for (int num : nums) {
+        pq.offer(num);
+    }
+    for (int i = 1; i < k; i++) {
+        pq.poll();
+    }
+    return pq.peek();
+}
+```
+
+``` python []
+def find_kth_largest(nums: List[int], k: int) -> int:
+    return heapq.nlargest(k, nums)[-1]
+```
+
+2. 合并K个有序链表
+``` cpp []
+ListNode* mergeKLists(vector<ListNode*>& lists) {
+    auto cmp = [](ListNode* a, ListNode* b) {
+        return a->val > b->val;
+    };
+    priority_queue<ListNode*, vector<ListNode*>, decltype(cmp)> pq(cmp);
+    
+    for (ListNode* list : lists) {
+        if (list) pq.push(list);
+    }
+    
+    ListNode dummy(0);
+    ListNode* tail = &dummy;
+    
+    while (!pq.empty()) {
+        ListNode* node = pq.top();
+        pq.pop();
+        tail->next = node;
+        tail = node;
+        if (node->next) pq.push(node->next);
+    }
+    
+    return dummy.next;
+}
+```
+
+``` java []
+public ListNode mergeKLists(ListNode[] lists) {
+    PriorityQueue<ListNode> pq = new PriorityQueue<>(
+        (a, b) -> a.val - b.val
+    );
+    
+    for (ListNode list : lists) {
+        if (list != null) pq.offer(list);
+    }
+    
+    ListNode dummy = new ListNode(0);
+    ListNode tail = dummy;
+    
+    while (!pq.isEmpty()) {
+        ListNode node = pq.poll();
+        tail.next = node;
+        tail = node;
+        if (node.next != null) pq.offer(node.next);
+    }
+    
+    return dummy.next;
+}
+```
+
+``` python []
+def merge_k_lists(lists: List[ListNode]) -> ListNode:
+    heap = []
+    for i, head in enumerate(lists):
+        if head:
+            heapq.heappush(heap, (head.val, i, head))
+    
+    dummy = ListNode(0)
+    tail = dummy
+    
+    while heap:
+        val, i, node = heapq.heappop(heap)
+        tail.next = node
+        tail = node
+        if node.next:
+            heapq.heappush(heap, (node.next.val, i, node.next))
+    
+    return dummy.next
+```
