--- a/00.语法/00.16_栈.md
+++ b/00.语法/00.16_栈.md
@@ -1,3 +1,216 @@
 # 栈
 
-待更新...
+## 问题描述
+
+栈是一种后进先出(LIFO)的数据结构。  
+在C++中为stack，Java中可用ArrayDeque模拟，Python中可用list模拟。  
+它提供了在一端进行插入和删除操作的能力。
+
+## 基本概念
+
+### 特点
+1. 后进先出
+2. 只能访问栈顶
+3. 支持压栈和弹栈
+4. 可以检查栈空
+5. 可以查看栈顶元素
+
+### 代码实现
+
+1. C++ Stack
+``` c++ []
+#include <iostream>
+#include <stack>
+using namespace std;
+
+int main() {
+    // 创建栈
+    stack<int> s;
+    
+    // 压栈
+    s.push(1);
+    s.push(2);
+    s.push(3);
+    
+    // 查看栈顶元素
+    cout << "Top: " << s.top() << endl;  // 输出：3
+    
+    // 弹栈
+    s.pop();
+    cout << "After pop, top: " << s.top() << endl;  // 输出：2
+    
+    // 检查栈空
+    cout << "Is empty: " << (s.empty() ? "yes" : "no") << endl;
+    
+    // 获取栈大小
+    cout << "Size: " << s.size() << endl;
+    
+    // 清空栈
+    while (!s.empty()) {
+        cout << s.top() << " ";  // 输出栈中元素
+        s.pop();
+    }
+    cout << endl;
+    
+    return 0;
+}
+```
+
+2. Java ArrayDeque
+``` java []
+import java.util.ArrayDeque;
+
+public class Main {
+    public static void main(String[] args) {
+        // 创建栈（使用ArrayDeque模拟）
+        ArrayDeque<Integer> stack = new ArrayDeque<>();
+        
+        // 压栈
+        stack.push(1);
+        stack.push(2);
+        stack.push(3);
+        
+        // 查看栈顶元素
+        System.out.println("Top: " + stack.peek());  // 输出：3
+        
+        // 弹栈
+        stack.pop();
+        System.out.println("After pop, top: " + stack.peek());  // 输出：2
+        
+        // 检查栈空
+        System.out.println("Is empty: " + stack.isEmpty());
+        
+        // 获取栈大小
+        System.out.println("Size: " + stack.size());
+        
+        // 清空栈
+        while (!stack.isEmpty()) {
+            System.out.print(stack.pop() + " ");  // 输出栈中元素
+        }
+        System.out.println();
+    }
+}
+```
+
+3. Python List
+``` python []
+# 创建栈（使用列表模拟）
+stack = []
+
+# 压栈
+stack.append(1)
+stack.append(2)
+stack.append(3)
+
+# 查看栈顶元素
+print("Top:", stack[-1])  # 输出：3
+
+# 弹栈
+stack.pop()
+print("After pop, top:", stack[-1])  # 输出：2
+
+# 检查栈空
+print("Is empty:", len(stack) == 0)
+
+# 获取栈大小
+print("Size:", len(stack))
+
+# 清空栈
+while stack:
+    print(stack.pop(), end=" ")  # 输出栈中元素
+print()
+
+# 也可以封装成类
+class Stack:
+    def __init__(self):
+        self.items = []
+    
+    def push(self, item):
+        self.items.append(item)
+    
+    def pop(self):
+        if not self.is_empty():
+            return self.items.pop()
+        raise IndexError("pop from empty stack")
+    
+    def peek(self):
+        if not self.is_empty():
+            return self.items[-1]
+        raise IndexError("peek at empty stack")
+    
+    def is_empty(self):
+        return len(self.items) == 0
+    
+    def size(self):
+        return len(self.items)
+```
+
+## 应用场景
+
+1. 函数调用
+2. 表达式求值
+3. 括号匹配
+4. 深度优先搜索
+5. 撤销操作
+
+## 注意事项
+
+1. 栈溢出
+2. 空栈操作
+3. 内存管理
+4. 性能考虑
+5. 线程安全性
+
+## 常见示例
+
+1. 括号匹配
+``` cpp []
+bool isValid(string s) {
+    stack<char> st;
+    for (char c : s) {
+        if (c == '(' || c == '[' || c == '{') {
+            st.push(c);
+        } else {
+            if (st.empty()) return false;
+            if (c == ')' && st.top() != '(') return false;
+            if (c == ']' && st.top() != '[') return false;
+            if (c == '}' && st.top() != '{') return false;
+            st.pop();
+        }
+    }
+    return st.empty();
+}
+```
+
+``` java []
+public static boolean isValid(String s) {
+    ArrayDeque<Character> stack = new ArrayDeque<>();
+    for (char c : s.toCharArray()) {
+        if (c == '(' || c == '[' || c == '{') {
+            stack.push(c);
+        } else {
+            if (stack.isEmpty()) return false;
+            if (c == ')' && stack.peek() != '(') return false;
+            if (c == ']' && stack.peek() != '[') return false;
+            if (c == '}' && stack.peek() != '{') return false;
+            stack.pop();
+        }
+    }
+    return stack.isEmpty();
+}
+```
+
+``` python []
+def is_valid(s: str) -> bool:
+    stack = []
+    for c in s:
+        if c in '([{':
+            stack.append(c)
+        else:
+            if not stack: return False
+            if c == ')' and stack[-1] != '(': return False
+            if c == ']' and stack[-1] != '[': return False
+            if c == '}' and stack[-1] != '{': return False
+            stack.pop()
+    return len(stack) == 0
+```
